--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Criar um ponto de coleta</title>
-  <link rel="stylesheet" href="./styles/main.css">
-  <link rel="stylesheet" href="./styles/create-point.css">
-  <link rel="stylesheet" href="./styles/responsive.css">
+  <link rel="stylesheet" href="../../public/styles/main.css">
+  <link rel="stylesheet" href="../../public/styles/create-point.css">
+  <link rel="stylesheet" href="../../public/styles/responsive.css">
 </head>
 
 <body>
   <div id="page-create-point">
     <header>
-      <img src="./assets/logo.svg" alt="Logomarca">
+      <img src="../../public/assets/logo.svg" alt="Logomarca">
       <a href="./index.html">
         <span></span>
         Voltar para a home
@@ -72,27 +72,27 @@
 
         <div class="items-grid">
           <li data-id="1">
-            <img src="./assets/lampadas.svg" alt="Lâmpadas">
+            <img src="../../public/assets/lampadas.svg" alt="Lâmpadas">
             <span>Lâmpadas</span>
           </li>
           <li data-id="2">
-            <img src="./assets/baterias.svg" alt="Pilhas e Baterias">
+            <img src="../../public/assets/baterias.svg" alt="Pilhas e Baterias">
             <span>Pilhas e Baterias</span>
           </li>
           <li data-id="3">
-            <img src="./assets/papeis-papelao.svg" alt="Papéis e Papelão">
+            <img src="../../public/assets/papeis-papelao.svg" alt="Papéis e Papelão">
             <span>Papéis e Papelão</span>
           </li>
           <li data-id="4">
-            <img src="./assets/eletronicos.svg" alt="Resíduos Eletrônicos">
+            <img src="../../public/assets/eletronicos.svg" alt="Resíduos Eletrônicos">
             <span>Resíduos Eletrônicos</span>
           </li>
           <li data-id="5">
-            <img src="./assets/organicos.svg" alt="Resíduos Orgânicos">
+            <img src="../../public/assets/organicos.svg" alt="Resíduos Orgânicos">
             <span>Resíduos Orgânicos</span>
           </li>
           <li data-id="6">
-            <img src="./assets/oleo.svg" alt="Óleo de Cozinha">
+            <img src="../../public/assets/oleo.svg" alt="Óleo de Cozinha">
             <span>Óleo de Cozinha</span>
           </li>
         </div>
@@ -107,7 +107,7 @@
 
   </div>
 
-  <script src="./scripts/create-point.js"></script>
+  <script src="../../public/scripts/create-point.js"></script>
 </body>
 
 </html>
