--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ecoleta</title>
-  <link rel="stylesheet" href="./styles/main.css">
-  <link rel="stylesheet" href="./styles/home.css">
-  <link rel="stylesheet" href="./styles/modal.css">
-  <link rel="stylesheet" href="./styles/responsive.css">
+  <link rel="stylesheet" href="../../public/styles/main.css">
+  <link rel="stylesheet" href="../../public/styles/home.css">
+  <link rel="stylesheet" href="../../public/styles/modal.css">
+  <link rel="stylesheet" href="../../public/styles/responsive.css">
 </head>
 
 <body>
   <div id="page-home">
     <div class="content">
       <header>
-        <img src="./assets/logo.svg" alt="Logomarca">
+        <img src="../../public/assets/logo.svg" alt="Logomarca">
         <a href="./create-point.html">
           <span></span>
           Cadestre um ponto de coleta
@@ -43,14 +43,14 @@
         <div class="search field">
           <input type="text" name="search" placeholder="Pesquise por cidade">
           <button>
-            <img src="./assets/search.svg" alt="Buscar">
+            <img src="../../public/assets/search.svg" alt="Buscar">
           </button>
         </div>
       </form>
     </div>
   </div>
 
-  <script src="./scripts/home.js"></script>
+  <script src="../../public/scripts/home.js"></script>
 </body>
 
 </html>
