--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resultado da pesquisa</title>
-  <link rel="stylesheet" href="./styles/main.css">
-  <link rel="stylesheet" href="./styles/search-results.css">
-  <link rel="stylesheet" href="./styles/responsive.css">
+  <link rel="stylesheet" href="../../public/styles/main.css">
+  <link rel="stylesheet" href="../../public/styles/search-results.css">
+  <link rel="stylesheet" href="../../public/styles/responsive.css">
 </head>
 
 <body>
   <div id="page-search-results">
     <header>
-      <img src="./assets/logo.svg" alt="Logomarca">
+      <img src="../../public/assets/logo.svg" alt="Logomarca">
       <a href="./index.html">
         <span></span>
         Voltar para a home
