--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -1,13 +1,17 @@
+body {
+  background-color: #ffffff;
+}
+
 body::after {
   content: "";
-  position: fixed;
-  background: white;
-  top: 260px;
+  position: absolute;
+  background: var(--white-grey);
+  top: 0;
   right: 0;
   left: 0;
   bottom: 0;
+  height: 16rem;
   z-index: -1;
-
 }
 
 #page-search-results {
