--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -71,3 +71,14 @@
 #modal form button:hover {
   background-color: #2fb85e;
 }
+
+#modal.point .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#modal.point .content h1 {
+  color: #fff;
+  margin-top: 32px;
+}
